--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "release": "npm run build && npm run lerna:version && npm run lerna:pub",
     "test": "npm run lint && npm run jest",
     "test:e2e": "npm run jest:e2e",
-    "lint": "eslint --ext=.ts .",
+    "lint": "eslint --cache --ext=.ts .",
     "lint:fix": "eslint --fix --ext=.ts .",
     "jest": "jest --runInBand --coverage",
     "jest:e2e": "jest --runInBand --config=./jest.e2e.config.js",
@@ -28,7 +28,7 @@
     "coveralls": "3.1.0",
     "eslint": "7.22.0",
     "eslint-config-airbnb-typescript": "12.3.1",
-    "eslint-config-prettier": "7.2.0",
+    "eslint-config-prettier": "8.1.0",
     "eslint-import-resolver-typescript": "2.4.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jest": "24.3.2",
