--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -21,7 +21,8 @@
     "@nestjs-query/core": "0.24.4",
     "lodash.escaperegexp": "^4.1.2",
     "lodash.merge": "^4.6.2",
-    "tslib": "^2.1.0"
+    "tslib": "^2.1.0",
+    "camel-case": "^4.1.2"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
