--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -22,7 +22,8 @@
     "lodash.filter": "^4.6.0",
     "lodash.omit": "^4.5.0",
     "tslib": "^2.1.0",
-    "uuid": "8.3.2"
+    "uuid": "^8.3.2",
+    "camel-case": "^4.1.2"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
