--- a/examples/project.json
+++ b/examples/project.json
@@ -1,23 +1,18 @@
 {
+  "$schema": "../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "examples/src",
   "projectType": "application",
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "examples/**/*.ts"
-        ]
+        "lintFilePatterns": ["examples/**/*.ts"]
       }
     },
     "e2e": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/examples"
-      ],
+      "outputs": ["coverage/examples"],
       "options": {
         "jestConfig": "jest.e2e.ts",
         "runInBand": true
