--- a/package.json
+++ b/package.json
@@ -62,12 +62,12 @@
     "@nestjs/schematics": "8.0.11",
     "@nestjs/testing": "8.4.7",
     "@nestjs/typeorm": "8.0.4",
-    "@nrwl/eslint-plugin-nx": "14.1.4",
-    "@nrwl/jest": "14.1.4",
-    "@nrwl/js": "14.1.4",
-    "@nrwl/linter": "14.1.4",
-    "@nrwl/node": "^14.1.4",
-    "@nrwl/nx-cloud": "^14.0.3",
+    "@nrwl/eslint-plugin-nx": "14.5.4",
+    "@nrwl/jest": "14.5.4",
+    "@nrwl/js": "14.5.4",
+    "@nrwl/linter": "14.5.4",
+    "@nrwl/node": "14.5.4",
+    "@nrwl/nx-cloud": "14.3.0",
     "@nx-plus/docusaurus": "^14.1.0",
     "@typegoose/typegoose": "^9.8.1",
     "@types/express": "4.17.13",
@@ -80,19 +80,19 @@
     "@types/lodash.omit": "4.5.7",
     "@types/lodash.pick": "4.4.7",
     "@types/mongodb": "4.0.7",
-    "@types/node": "16.11.38",
+    "@types/node": "18.0.0",
     "@types/passport-jwt": "3.0.6",
     "@types/passport-local": "1.0.34",
     "@types/pluralize": "0.0.29",
     "@types/supertest": "2.0.12",
     "@types/uuid": "8.3.4",
     "@types/ws": "8.5.3",
-    "@typescript-eslint/eslint-plugin": "5.27.0",
-    "@typescript-eslint/parser": "5.27.0",
+    "@typescript-eslint/eslint-plugin": "5.33.0",
+    "@typescript-eslint/parser": "5.33.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "dataloader": "2.1.0",
-    "eslint": "8.21.0",
+    "eslint": "8.15.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "16.2.0",
     "eslint-config-prettier": "8.5.0",
@@ -110,7 +110,7 @@
     "jest-extended": "2.0.0",
     "jest-snapshot-serializer-raw": "1.2.0",
     "mongodb-memory-server": "6.9.6",
-    "nx": "14.1.4",
+    "nx": "14.5.4",
     "prettier": "2.7.1",
     "sql-formatter": "^4.0.2",
     "sqlite3": "^5.0.11",
@@ -119,7 +119,7 @@
     "ts-loader": "9.3.1",
     "ts-mockito": "2.6.1",
     "ts-morph": "12.2.0",
-    "ts-node": "9.1.1",
+    "ts-node": "10.8.2",
     "tsconfig-extends": "1.0.1",
     "tsconfig-paths": "3.11.0",
     "typescript": "4.4.4"
