--- a/package.json
+++ b/package.json
@@ -120,5 +120,6 @@
     "tsconfig-paths": "3.14.1",
     "typescript": "4.4.4"
   },
-  "packageManager": "yarn@3.2.1"
+  "packageManager": "yarn@3.2.1",
+  "version": "1.0.0-alpha.0"
 }
