--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,7 +37,7 @@
   },
   "peerDependencies": {
     "@nestjs/common": "^9.0.5",
-    "class-transformer": "^0.2.3 || 0.3.1 || 0.4"
+    "class-transformer": "^0.2.3 || 0.3.1 || 0.4 || 0.5.1"
   },
   "devDependencies": {
     "@nestjs/core": "9.0.5",
