--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -51,7 +51,7 @@
     "@nestjs/common": "^9.0.5",
     "@nestjs/core": "^9.0.5",
     "@nestjs/graphql": "^10.0.0",
-    "class-transformer": "^0.2.3 || 0.3.1 || 0.4",
+    "class-transformer": "^0.2.3 || 0.3.1 || 0.4 || 0.5.1",
     "class-validator": "^0.13.0",
     "dataloader": "^2.0.0",
     "graphql": "^15.0.0 || ^16.0.0",
