--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -29,7 +29,7 @@
   "peerDependencies": {
     "@nestjs/common": "^9.0.5",
     "@nestjs/typeorm": "^9.0.0",
-    "class-transformer": "^0.2.3 || 0.3.1 || 0.4",
+    "class-transformer": "^0.2.3 || 0.3.1 || 0.4 || 0.5.1",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
