--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "ts-jest": "27.1.5",
     "ts-loader": "9.3.1",
     "ts-mockito": "2.6.1",
-    "ts-morph": "12.2.0",
+    "ts-morph": "^15.0.0",
     "ts-node": "10.9.1",
     "tsconfig-extends": "1.0.1",
     "tsconfig-paths": "3.14.1",
