--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -12,7 +12,7 @@
     "test": "__tests__"
   },
   "files": [
-    "dist/src/**"
+    "src/**"
   ],
   "publishConfig": {
     "access": "public"
@@ -26,7 +26,7 @@
   },
   "peerDependencies": {
     "@nestjs/common": "^8.0.0 || ^9.0.0",
-    "@typegoose/typegoose": "^8.0.0-beta.2",
+    "@typegoose/typegoose": "^8.0.0 || ^9.0.0",
     "mongoose": "^6.3.3",
     "nestjs-typegoose": "^7.1.38"
   },
