--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/federation": "0.36.2",
     "@docusaurus/core": "2.0.1",
     "@docusaurus/preset-classic": "2.0.1",
+    "@m8a/nestjs-typegoose": "8.0.5",
     "@nestjs/common": "8.4.7",
     "@nestjs/core": "8.4.7",
     "@nestjs/graphql": "^10.0.22",
@@ -28,7 +29,6 @@
     "clsx": "^1.2.1",
     "mongoose": "^6.5.3",
     "mysql2": "2.3.3",
-    "nestjs-typegoose": "7.1.38",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
