--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -25,10 +25,10 @@
     "tslib": "^2.4.0"
   },
   "peerDependencies": {
+    "@m8a/nestjs-typegoose": "^8.0.5",
     "@nestjs/common": "^8.0.0 || ^9.0.0",
     "@typegoose/typegoose": "^8.0.0 || ^9.0.0",
-    "mongoose": "^6.3.3",
-    "nestjs-typegoose": "^7.1.38"
+    "mongoose": "^6.3.3"
   },
   "repository": {
     "type": "git",
