--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -75,7 +75,7 @@
     "graphql": "^15.7.2",
     "graphql-subscriptions": "^2.0.0",
     "ts-mockito": "2.6.1",
-    "ts-morph": "12.2.0",
+    "ts-morph": "^17.0.0",
     "typescript": "4.4.4"
   }
 }
