--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codeshine/nestjs-query-graphql",
-  "version": "0.30.6",
+  "version": "0.30.7-alpha.2",
   "description": "Nestjs graphql query adapter",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
